--- a/packages/mfe1/package.json
+++ b/packages/mfe1/package.json
@@ -7,10 +7,11 @@
     "serve:dist": "serve ./dist/mfe1 -l 3000",
     "build": "webpack --config webpack.mfe1.config.js",
     "start": "webpack-dev-server --config webpack.mfe1.config.js"
-
   },
   "dependencies": {
-    "rxjs": "^7.0.0-beta.0"
+    "rxjs": "^7.0.0-beta.0",
+    "useless-lib": "^1.1.0",
+    "webpack": "^5.0.0-beta.22"
   },
   "keywords": [],
   "author": "",
