--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "root",
   "private": true,
+  "scripts": {
+    "start": "lerna run start",
+    "postinstall": "lerna bootstrap"
+  },
   "devDependencies": {
     "lerna": "^3.22.1",
     "concurrently": "^5.1.0",
