--- a/packages/mfe3/package.json
+++ b/packages/mfe3/package.json
@@ -10,8 +10,9 @@
   },
   "dependencies": {
     "rxjs": "^7.0.0-beta.0",
+    "ts-loader": "^8.0.6",
     "useless-lib": "^2.0.1",
-    "webpack": "^5.0.0-beta.22"
+    "webpack": "^5.0.0"
   },
   "keywords": [],
   "author": "",
