--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "root",
   "private": true,
   "devDependencies": {
-    "lerna": "^3.22.1",
     "concurrently": "^5.1.0",
     "css-loader": "^3.5.1",
     "html-webpack-plugin": "git://github.com/ScriptedAlchemy/html-webpack-plugin.git#master",
+    "lerna": "^3.22.1",
     "mini-css-extract-plugin": "^0.9.0",
     "npm-run-all": "^4.1.5",
     "raw-loader": "^4.0.0",
@@ -13,7 +13,7 @@
     "style-loader": "^1.1.3",
     "ts-loader": "^6.2.2",
     "typescript": "^3.8.3",
-    "webpack": "5.0.0-beta.22",
+    "webpack": "^5.4.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
   }
