--- a/packages/shell/package.json
+++ b/packages/shell/package.json
@@ -10,8 +10,7 @@
   },
   "dependencies": {
     "rxjs": "^7.0.0-beta.0",
-    "useless-lib": "^1.1.0",
-    "webpack": "^5.0.0-beta.22"
+    "useless-lib": "^1.0.0"
   },
   "keywords": [],
   "author": "",
